<resources>
    <string name="app_name">Instagram clone</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_cpassword">Confirm Password</string>
    <string name="str_signin">Sign In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_already_account">Already have an account</string>
    <string name="str_donot_account">Don\'t have an account?</string>
    <string name="str_home">Home</string>
    <string name="str_search">Search</string>
    <string name="str_upload">Upload</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_profile">Profile</string>
    <string name="str_write_caption">Write a caption</string>
    <string name="str_follow">Follow</string>
    <string name="str_my_email">jonibekxolmonov2002@gmail.com</string>
    <string name="str_following">Following</string>
    <string name="str_followers">Followers</string>
    <string name="str_posts">Posts</string>
    <string name="str_upper_search">Search</string>
    <string name="str_jonibek_xolmonov">Jonibek Xolmonov</string>
    <string name="str_signin_success">Signed in successfully</string>
    <string name="str_signin_failed">Sign in failed</string>
    <string name="str_signup_success">Signed up successfully</string>
    <string name="str_signup_failed">Sign up failed</string>
    <string name="str_signin_empty">Fill all fields</string>
    <string name="str_signup_empty">Fill all fields</string>
    <string name="str_delete_post">Delete post</string>
    <string name="str_your_post_is_deleted_forever">Your post is deleted forever</string>
    <string name="str_share_image">Share image</string>
    <string name="str_copy_link">Copy link</string>
    <string name="str_download_image">Download image</string>
    <string name="str_options">Options</string>
</resources>