<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        android:title="@string/str_home" />

    <item
        android:id="@+id/navigationSearch"
        android:icon="@drawable/ic_search"
        android:menuCategory="secondary"
        android:title="@string/str_search" />

    <item
        android:id="@+id/navigationUpload"
        android:icon="@drawable/ic_camera"
        android:menuCategory="secondary"
        android:title="@string/str_upload" />

    <item
        android:id="@+id/navigationFavorite"
        android:icon="@drawable/ic_favorite"
        android:menuCategory="secondary"
        android:title="@string/str_favorite" />

    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/ic_profile"
        android:menuCategory="secondary"
        android:title="@string/str_profile" />

</menu>