<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="2dp"
        android:src="@drawable/img_default_user"
        app:shapeAppearanceOverlay="@style/circle"
        app:strokeColor="@color/app_color_2"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_jonibek_xolmonov"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_my_email"
            android:textColor="@color/black"
            android:singleLine="true"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvFollow"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_rounded_corners"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/str_following"
        android:textColor="@color/black"
        android:textSize="13sp" />
</LinearLayout>